# cpp_asgn

./: README.md
.github/: CODEOWNERS
.github/workflows/: containers.yml  dynamic-array.yml  exception-bug.yml  factorial.yml  hello-world.yml  number_guessing.yml  openai-plagiat.yml  polygon.yml  promise.yml  randomizer.yml  rectangle-1.yml  rectangle-2.yml  rectangle.yml  scheduler.yml  simple-exception.yml  simple-optional.yml  simple-shared-ptr.yml  simple-unique-ptr.yml  simple-vector.yml  template-class.yml  template-function.yml  template-specialization.yml  timer.yml  two_numbers.yml  zoo.yml
basics/tasks/: README.md
basics/tasks/containers/: CMakeLists.txt  README.md  main.cpp  solution_test.cpp
basics/tasks/containers/include/: solution.h
basics/tasks/factorial/: README.md  main.cpp  solution_test.cpp
basics/tasks/hello-world/: CMakeLists.txt  README.md  hello_world_test.cpp  main.cpp
basics/tasks/hello-world/include/: hello_world.h
basics/tasks/number-guessing/: README.md  main.cpp  solution_test.cpp
basics/tasks/polygon/: README.md  main.cpp  solution_test.cpp
basics/tasks/rectangle-1/: solution_test.cpp
basics/tasks/rectangle-2/: README.md  main.cpp  solution_test.cpp
error-handling/exceptions/: README.md  solution_test.cpp
error-handling/optional/: solution_test.cpp
error-handling/tasks/: README.md
error-handling/tasks/dangerous-exceptions/: CMakeLists.txt  README.md  account.h  solution.h  solution_test.cpp
functions/tasks/: README.md
future/tasks/: README.md
pointers/tasks/: README.md
templates/tasks/: README.md
(+51 files in other folders)
